# OpenSpeech

./: .gitignore  .npmrc  LICENSE  OpenSpeech.code-workspace  README.md  index.html  landing.html  package.json  pnpm-lock.yaml  promo.html  tsconfig.json  vite.config.ts
.claude/skills/openspeech-dev/: SKILL.md
.claude/skills/openspeech-release/: SKILL.md
.claude/skills/openspeech-update/: SKILL.md
.github/workflows/: release.yml
docs/: README.en.md  README.md  README.zh-TW.md  ai-refine.md  cloud-endpoints.md  dictionary.md  features.md  hints.md  history.md  hotkeys.md  onboarding.md  permissions.md  privacy.md  product.md  settings.md  speech-providers.md  subscription.md  voice-input-flow.md
docs/changelogs/0.2.10/: zh.md
docs/changelogs/0.2.11/: zh.md
docs/changelogs/0.2.12/: zh.md
docs/changelogs/0.2.13/: zh.md
docs/changelogs/0.2.14/: zh.md
docs/changelogs/0.2.15/: zh.md
docs/changelogs/0.2.16/: zh.md
docs/changelogs/0.2.17/: zh.md
docs/changelogs/0.2.18/: zh.md
docs/changelogs/0.2.19/: zh.md
docs/changelogs/0.2.20/: zh.md
docs/changelogs/0.2.21/: zh.md
docs/changelogs/0.2.22/: zh.md
docs/changelogs/0.2.23/: zh.md
docs/changelogs/0.2.24/: zh.md
docs/changelogs/0.2.25/: en.md  zh.md
docs/changelogs/0.2.26/: zh.md
docs/changelogs/0.2.26-beta.0/: zh.md
docs/changelogs/0.2.26-beta.1/: zh.md
docs/changelogs/0.2.26-beta.2/: zh.md
docs/changelogs/0.2.26-beta.3/: zh.md
docs/changelogs/0.2.26-beta.4/: zh.md
docs/changelogs/0.2.26-beta.5/: zh.md
docs/changelogs/0.2.26-beta.6/: zh.md
docs/changelogs/0.2.27/: zh.md
docs/changelogs/0.2.28/: zh.md
docs/changelogs/0.2.28-beta.0/: zh.md
docs/changelogs/0.2.29/: zh.md
docs/changelogs/0.2.29-beta.0/: zh.md
docs/changelogs/0.2.30-beta.0/: zh.md
docs/changelogs/0.2.30-beta.1/: zh.md
docs/changelogs/0.2.30-beta.10/: zh.md
docs/changelogs/0.2.30-beta.11/: zh.md
docs/changelogs/0.2.30-beta.12/: zh.md
docs/changelogs/0.2.30-beta.13/: zh.md
docs/changelogs/0.2.30-beta.14/: zh.md
docs/changelogs/0.2.30-beta.15/: zh.md
docs/changelogs/0.2.30-beta.16/: zh.md
docs/changelogs/0.2.30-beta.2/: zh.md
docs/changelogs/0.2.30-beta.3/: zh.md
docs/changelogs/0.2.30-beta.4/: zh.md
docs/changelogs/0.2.30-beta.5/: zh.md
landing/: LandingPage.tsx  main.tsx
landing/clones/: DictionaryStatic.tsx  HotkeyPreviewStatic.tsx  MeetingsLiveStatic.tsx  PromoDemoStatic.tsx
landing/components/: AppWindow.tsx  TopNav.tsx
landing/lib/: useSectionInView.ts
landing/sections/: AccuracySection.tsx  CTASection.tsx  DictionarySection.tsx  MeetingSection.tsx
patches/: appdmg.patch
scripts/: build-dmg.mjs  frontend.sh  gen-cue-wavs.mjs  profile-rust.sh  reset-permissions.sh  sync-version.mjs  tauri.mjs
src/: App.css  main.tsx  promo.tsx  router.tsx
src-tauri/: .env.example  .gitignore  Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json  desktop.json  macos.json  overlay.json  quick-panel.json
src-tauri/examples/: prompt_eval_runner.rs  test_ai_refine_chat.rs  test_meeting_saas_realtime.rs  test_meeting_speaker_realtime.rs  test_realtime_asr.rs  test_realtime_asr_segmentation.rs  test_vad_silent.rs  transcribe_audio_runner.rs
src-tauri/icons/: icon.icns
src-tauri/src/: cue.rs  http.rs  idle.rs  lib.rs  main.rs  update_channel.rs
src-tauri/src/active_app/: mod.rs
src-tauri/src/ai_refine/: mod.rs
src-tauri/src/asr/: byok.rs  byok_e2e.rs  mod.rs  realtime_backend.rs  test_provider.rs
src-tauri/src/asr/aliyun/: file.rs  mod.rs  oss_upload.rs  realtime_session.rs
src-tauri/src/asr/backends/: aliyun.rs  mod.rs  saas.rs  tencent.rs
src-tauri/src/asr/meeting/: mod.rs  provider.rs  saas.rs  tencent_speaker.rs  tests.rs
src-tauri/src/asr/tencent/: cos.rs  file.rs  mod.rs  realtime.rs  realtime_session.rs  signature.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/device/: CONTRACT.md  ble_provisioner.rs  ble_scanner.rs  commands.rs  concurrent_lock.rs  error_codes.rs  event.rs  handshake.rs  heartbeat.rs  hub.rs  injection.rs  mod.rs  ota_pusher.rs  protocol.rs  registry.rs  version_guard.rs  wifi_mac.rs  ws_server.rs
src-tauri/src/dictionary_agent/: mod.rs
src-tauri/src/focus_check/: mod.rs
src-tauri/src/hotkey/: mod.rs  modifier_only.rs
src-tauri/src/inject/: mod.rs
src-tauri/src/meetings/: mod.rs
src-tauri/src/openloaf/: callback.rs  dev_session.rs  feedback.rs  mod.rs  storage.rs
src-tauri/src/overlay/: mod.rs
src-tauri/src/permissions/: macos.rs  mod.rs
src-tauri/src/quick_panel/: mod.rs
src-tauri/src/secrets/: mod.rs
src-tauri/src/stt/: mod.rs
src-tauri/src/transcribe/: mod.rs
src-tauri/templates/: main.desktop
src/components/: AccountDialog.tsx  AiPromptDialogs.tsx  AudioWavePlayer.tsx  AuthRecoveryDialog.tsx  CloseToBackgroundDialog.tsx  FeedbackDialog.tsx  HistoryEditDialog.tsx  HotkeyBinder.tsx  HotkeyConflictDialog.tsx  HotkeyDictationCard.tsx  HotkeyField.tsx  HotkeyPreview.tsx  Layout.tsx  LiveDictationPanel.tsx  LoadingScreen.tsx  LoginDialog.tsx  MeetingErrorDialog.tsx  NoInternetDialog.tsx  PulsarGrid.tsx  QuickDictDialog.tsx  ReportErrorButton.tsx  SearchBox.tsx  SettingsContent.tsx  SettingsDialog.tsx  StatsDialog.tsx  UpdateAvailableToast.tsx  WindowControls.tsx
src/i18n/: index.ts
src/lib/: activeApp.ts  ai-refine-fallback.ts  ai-refine.ts  appNameI18n.ts  asrSystemPrompt.ts  audio.ts  autostart.ts  cue.ts  db.ts  defaultAiPrompts.ts  dictation-lang.ts  dictation-provider-ref.ts  dictation-provider.ts  dictionaryAgent.ts  domainKeywords.ts  domains.ts  errors.ts  focus.ts  historyClip.ts  hotkey.ts  hotkeyVisual.tsx  hotwordsCache.ts  i18n-sync.ts  ids.ts  machineInfo.ts  meetings-history.ts  meetings.ts  permissions.ts  platform.ts  refineContext.ts  reportError.ts  secrets.ts  statsAggregator.ts  stt.ts  updateScheduler.ts  updaterInstall.ts  wordCount.ts
src/stores/: auth.ts  dictationResult.ts  dictionary.ts  history.ts  hotkeys.ts  meetings.ts  playback.ts  recording.ts  settings.ts  stats.ts  ui.ts
(+135 files in other folders)
