[package]
name = "openspeech"
version = "0.2.15"
description = "OpenSpeech - AI voice input desktop app"
authors = ["OpenSpeech"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openspeech_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"
log = "0.4"
cpal = "0.17.3"
hound = "3.5.1"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "http2", "json", "multipart", "stream"] }
enigo = "0.6.1"
openloaf-saas = "0.3.2"
base64 = "0.22"
tiny_http = "0.12"
uuid = { version = "1", features = ["v4"] }
url = "2"
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
# RustDesk fork —— 修了 crates.io 0.5.3 在 macOS 上的致命 bug（子线程跑 listen
# 遇到第一个 key event 就让进程静默 abort；Handy 项目切 fork 的真正原因）。
# 按 commit 精确 pin，cargo 只查本地 `~/.cargo/git/db/rdev-*/`，不走网络——
# 国内直连 GitHub 不稳时这点很关键。新环境首次 clone 项目若 db 里没此 commit
# 才需要联网拉一次（或走代理 / 本地 clone 后改 path = "..."）。
rdev = { git = "https://github.com/rustdesk-org/rdev", rev = "a90dbe11" }

# Examples-only：rustls 0.23 默认不再 auto-install crypto provider，主进程
# 是 reqwest 启动时间接 install 的；独立 example binary 没有这条链路，需要
# 显式 install，否则 tungstenite 升级 TLS 时直接 panic。
[dev-dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
# 社区维护的 macOS 权限 plugin（ayangweb/tauri-plugin-macos-permissions）。
# 我们用它的 `request_microphone_permission`（Apple 官方 AVCaptureDevice
# requestAccessForMediaType API）+ `request_accessibility_permission`
# （macos-accessibility-client）替换原先的 cpal probe / objc 0.2 hack。
# **不**用它的 `request_input_monitoring_permission`——它只 open settings，
# 不调 IOHIDRequestAccess，无法把 App 写入「输入监控」列表。我们自己保留
# 这条 IOHIDRequestAccess 路径。check_* 也保留自己实现以保留 5 值精细状态
# （plugin 只返回 bool，丢失 notDetermined / denied 区分，UX 文案需要）。
tauri-plugin-macos-permissions = "2.3.0"

