[package]
name = "openspeech"
version = "0.2.30-beta.1"
description = "OpenSpeech - AI voice input desktop app"
authors = ["OpenSpeech"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openspeech_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# dev 时让 OpenLoaf base/web URL 指向线上 openloaf.hexems.com，便于联调线上后端。
staging = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"
log = "0.4"
cpal = "0.17.3"
hound = "3.5.1"
vorbis_rs = "0.5.5"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "http2", "json", "multipart", "stream"] }
enigo = "0.6.1"
openloaf-saas = "0.3.16"
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
tiny_http = "0.12"
uuid = { version = "1", features = ["v4"] }
url = "2"
tauri-plugin-dialog = "2"
# dev-only：配合 lib.rs 里 #[cfg(debug_assertions)] gate；release 不启动 WebSocket。
tauri-plugin-mcp-bridge = "0.2"
webrtc-vad = "0.4.0"
async-openai = { version = "0.36", default-features = false, features = ["rustls", "chat-completion"] }
futures-util = "0.3"
async-trait = "0.1"
# 与 openloaf-saas 0.3.16 内部完全对齐（同步 tungstenite + rustls + webpki-roots），
# 复用同一份 crate，不引入额外 WS 栈。BYOK 腾讯实时 ASR 走这条路径。
tungstenite = { version = "0.24", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
# OpenLoaf fork（github.com/OpenLoaf/rdev → crates.io openloaf-rdev）—— 在 macOS
# event tap 路径上加 kCGEventTapDisabledByTimeout / ByUserInput 自愈，解决"按下
# 第一次没反应、得再按一次"的偶发 bug。crate 改名是因为上游 `rdev` 名字被 Narsil
# 占着；用 `package = "..."` 重命名后业务代码里的 `use rdev::...` 不用动。
rdev = { package = "openloaf-rdev", version = "0.5.1" }

# Examples-only：rustls 0.23 默认不再 auto-install crypto provider，主进程
# 是 reqwest 启动时间接 install 的；独立 example binary 没有这条链路，需要
# 显式 install，否则 tungstenite 升级 TLS 时直接 panic。
[dev-dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
# 社区维护的 macOS 权限 plugin（ayangweb/tauri-plugin-macos-permissions）。
# 我们用它的 `request_microphone_permission`（Apple 官方 AVCaptureDevice
# requestAccessForMediaType API）+ `request_accessibility_permission`
# （macos-accessibility-client）替换原先的 cpal probe / objc 0.2 hack。
# **不**用它的 `request_input_monitoring_permission`——它只 open settings，
# 不调 IOHIDRequestAccess，无法把 App 写入「输入监控」列表。我们自己保留
# 这条 IOHIDRequestAccess 路径。check_* 也保留自己实现以保留 5 值精细状态
# （plugin 只返回 bool，丢失 notDetermined / denied 区分，UX 文案需要）。
tauri-plugin-macos-permissions = "2.3.0"

